This documents significant changes in the dev branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-11-02:

- Fixed: assigning to TMOUT in a virtual subshell was rendering further
  assignments to TMOUT outside of that subshell ineffective.

- Fixed: the 'read' built-in was timing out according to the value of TMOUT
  even when it was not reading from a terminal. The 'read' command will now
  ignore $TMOUT when it is reading from a pipe, as was always documented.
  (Note that read's -t option is not affected by this change.)

2024-10-31:

- Fixed a regression that caused a standard output redirection within a block
  construct to cause inconsistent behaviour or a hang if: (a) standard output
  was also redirected on the block itself, and (b) the entire block was
  executed from within a command substitution. Bug introduced on 2022-01-11.
  Reproducer (should output "OK"): ok=$({ true >&2; } >&2; echo OK); echo $ok

2024-10-27:

- Fixed a bug that crashed the shell upon attempting to replace the shell
  with another command using 'exec' after unsetting the SHLVL variable.
  Bug introduced on 2021-05-18.

2024-10-23:

- Fixed a bug in multidimensional indexed array assignments where unquoted
  values that corresponded to reserved words (such as 'if' or 'select')
  incorrectly caused a syntax error. For example,
    my_array=((somevalue) select) && typeset -p my_array
  now works as expected. This bug was introduced in ksh 93r+ 2006-06-30.

2024-08-28:

- Fixed a crash that occurred for an arithmetic 'for' that has two instead of
  three ';'-separated expressions. The expected syntax error is now given.

2024-08-26:

- Fixed an infinite loop that occurred when a syntax error was thrown
  for an arithmetic 'for' loop on the interactive command line.

- [v1.1] Backported a change to '_' in types from the unreleased ksh 93v-